tests/reject/anonymous_eq.alg
sort S : Sort;
eq (x : S) x = x;
